...
    </LinearLayout>-->

    <ProgressBar
        android:id="@+id/progressChat"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/editMessageInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerchat"
...
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/chat_input_color"
        android:maxHeight="100dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendIcon"
        app:layout_constraintStart_toStartOf="parent" />
    <!--send icon -->
    <ImageView
        android:id="@+id/sendIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
...
