...
        android:name="com.example.janus.ChatFragment"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat" >
    </fragment>

    <fragment
        android:id="@+id/chatPageFragment"
        android:name="com.example.janus.ChatPageFragment"
        android:label="fragment_chat_page"
        tools:layout="@layout/fragment_chat_page" >
        <action
            android:id="@+id/action_chatPageFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
...
