<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.  om/tools"
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatPageFragment">

    <!--circle that show revolves until loading is done-->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recyclerview"
        app:layout_constraintTop_toTopOf="@+id/recyclerview" />
    <!--creates list-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerview"
        tools2:layout_editor_absoluteX="0dp" />

    <ImageButton
        android:id="@+id/createGroupChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:src="@drawable/groupchat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintVertical_bias="0.976"
        android:background="@drawable/roundedbutton"
        app:layout_constraintStart_toStartOf="parent"></ImageButton>

    <ImageButton
        android:id="@+id/addFriendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:src="@drawable/plusfriend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        android:background="@drawable/roundedbutton"
        app:layout_constraintStart_toStartOf="parent"></ImageButton>

    <Button
        android:id="@+id/Done"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintBottom_toTopOf="@+id/sendIconForChatPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerview"
        app:layout_constraintVertical_bias="0.976"></Button>



    <EditText
        android:id="@+id/typeFriendEmail"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/chat_input_color"
        android:hint="Type Friend Email"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="?attr/colorOnPrimary"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toTopOf="@id/chatPageFriendRequestsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/sendIconForChatPage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/createGroupChat"
        android:src="@drawable/sent_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/chatPageFriendRequestsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Friend Requests"
        app:layout_constraintBottom_toTopOf="@+id/addFriendButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>