<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
        android:id="@+id/newTaskTaskNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="Task Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newTaskSourceEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_buffer"
        android:ems="10"
        android:hint="Source"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskTaskNameEditText" />

    <Spinner
        android:id="@+id/newTaskWeightSpinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_buffer"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/newTaskWeightText"
        app:layout_constraintTop_toBottomOf="@+id/newTaskSourceEditText" />

    <TextView
        android:id="@+id/newTaskWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weight: "
        app:layout_constraintBottom_toBottomOf="@+id/newTaskWeightSpinner"
        app:layout_constraintStart_toStartOf="@+id/newTaskSourceEditText" />

    <DatePicker
        android:id="@+id/newTaskDueDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_gravity = "center"
        app:layout_constraintTop_toBottomOf="@+id/newTaskWeightText"
        />
    <EditText
        android:id="@+id/newTaskNotesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_buffer"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Notes"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/newTaskSourceEditText"
        app:layout_constraintStart_toStartOf="@+id/newTaskSourceEditText"
        app:layout_constraintTop_toBottomOf="@+id/newTaskDueDateEditText" />

    <Button
        android:id="@+id/newTaskSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskNotesEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
