<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/taskFragment"
        android:title="home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/calendarFragment"
        android:title="calendar"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_calendar_month_24"/>
    <item
        android:id="@+id/chatFragment"
        android:title="chat"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_24"/>
</menu>