<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity = "center"
        android:orientation="vertical"
        android:id="@+id/buttons">
    <Button
        android:id="@+id/addTaskNewTaskButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/addTaskNewTaskButtonText"
        android:layout_gravity="center"
         />

    <Button
        android:id="@+id/deleteTaskButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/addTaskImportTaskButtonText"
        android:layout_gravity="center"/>
</LinearLayout>
</LinearLayout>
